mudanças na home
Bloco principal mudado

--- a/www/public/pages/index.html
+++ b/www/public/pages/index.html
@@ -248,8 +248,11 @@
     <main class="main">
       <!-- Bloco 1 - principal -->
       <div class="main__home">
-        <section class="main__home__filter">
-          <div class="main__home__filter__image"></div>
+        <section class="main__home__campanhas">
+          <h2>Campanhas</h2>
+          <div class="main__home__campanhas__filter">
+            <div class="main__home__campanhas__filter__imagem"></div>
+          </div>
         </section>
 
         <section class="main__home__texto">
